# PS2RecompNFSHP2

./: .gitignore  AGENTS.md  CMakeLists.txt  DUAL_MODEL_WORKFLOW.md  PS2_PROJECT_STATE.md  README.md  build.ps1  config.toml  start.bat
Changelog/: 2026-03-20_1815_alpha-dirbin-trace.md  2026-03-20_2045_staged-build-wrappers.md  2026-03-20_2055_unified-build-script.md  2026-03-20_2140_crash-dialog-suppression-and-register-trace.md  2026-03-20_2318_build-output-force-rebuild.md  2026-03-20_2332_build-log-and-exe-verification.md  2026-03-21_0005_output-include-order-fix.md  2026-03-21_0030_stale-output-runtime-header-removal.md  2026-03-21_0115_run-log-and-override-probe.md  2026-03-21_0225_late-override-function-table-sort.md  2026-03-21_0245_recurse-continuation-fixed_cd-blocker-restored.md  2026-03-21_1315_secondary_cdvd_elf_discovery.md  2026-03-21_1345_sceCdRead-byte-range-fallback.md  2026-03-21_1750_unpacked-zzdata-dir-remap.md  2026-03-21_1845_duplicate-address-override-replacement.md  2026-03-21_1945_formatter-string-output-stubs.md  2026-03-21_2005_sif-load-failure-diagnostics.md  2026-03-21_2025_formatter-output-pointer-sync.md  2026-03-21_2045_formatter-contract-fix.md  2026-03-21_2319_monitor-and-dispatch-diagnostics.md  2026-03-21_2330_vsync-worker-dispatch-diagnostics.md  2026-03-22_0005_vsync-callback-return-trace.md  2026-03-22_0048_worker-pc-tick-diagnostics.md  2026-03-22_0056_live-run-tick-sampling.md  2026-03-22_0110_joystick-event-list-guard.md  2026-03-22_0221_constructor-stub-inits-for-file-queues.md  2026-03-22_0254_smart-incremental-build-routing.md  2026-03-22_0258_chunked-output-build-and-ninja-routing.md  2026-03-22_0325_ninja-single-config-wrapper-fix.md  2026-03-22_0405_async-filesystem-queue-diagnostics.md  2026-03-22_0415_gitignore-build-artifacts.md  2026-03-22_0425_smart-build-ninja-scan-fix.md  2026-03-22_0445_async-entry-queue-repair.md  2026-03-22_0500_runtime-action-wrapper-fix.md  2026-03-22_0510_build-artifact-assertions.md  2026-03-22_0530_queued-file-sort-followup.md  2026-03-22_0545_runtime-output-action.md  2026-03-22_0600_ninja-clean-first-regression-fix.md  2026-03-22_1257_texturepack-indexed-lookup.md  2026-03-22_1311_texturepack-override-entry-probe.md  (+10 more)
output/: CMakeLists.txt  main.cpp
ps2xRuntime/include/: ps2_runtime.h
ps2xRuntime/src/lib/: game_overrides.cpp  ps2_memory.cpp  ps2_runtime.cpp  ps2_stubs.cpp  ps2_syscalls.cpp
ps2xRuntime/src/lib/stubs/: ps2_stubs_gs.inl  ps2_stubs_misc.inl  ps2_stubs_ps2.inl
ps2xRuntime/src/lib/stubs/helpers/: ps2_stubs_helpers.inl
ps2xRuntime/src/lib/syscalls/: ps2_syscalls_interrupt.inl  ps2_syscalls_rpc.inl  ps2_syscalls_system.inl
tools/: TOOLING.md
tools/ai/: prompt_builder.py
tools/ai/artifacts/demo/: handoff-summary.json
tools/ai/artifacts/demo2/: handoff-summary.json  qwen-prepass-filled.txt  reduced-log.txt  state-excerpt.md
tools/ai/artifacts/py-demo/: qwen-prompt-summary.json  state-excerpt.md
tools/ai/artifacts/py-run-demo/: qwen-prepass-filled.txt  qwen-stdout.txt  reduced-log.txt
tools/ai/artifacts/py-run-demo-ok/: qwen-prepass-annotated.md  qwen-stdout.txt  qwen-triage.json  run-qwen-prompt-summary.json
tools/ai/artifacts/run-demo/: qwen-run-summary.json  qwen-stdout.txt  qwen-triage.json
